Remove forum navbar, no longer needed with stock dark theme Made it hard to read

--- a/MAL-Night.user.css
+++ b/MAL-Night.user.css
@@ -21,10 +21,10 @@
 	.page-common #headerSmall .banner-header-anime-straming,
 	.page-common #footer-block .banner-footer-anime-streaming,
 	.koukoku-sticky-wrapper,
-	.mal-modal.show,
-	.mal-modal-backdrop.show,
+    .mal-modal.show,
+    .mal-modal-backdrop.show,
 	.pda-tla-nUGkAdHmiepCTsbx,
-	.sUaidzctQfngSNMH-pdatla {
+    .sUaidzctQfngSNMH-pdatla {
 		visibility: hidden;
 		display: none !important;
 	}
@@ -55,7 +55,7 @@
 	.page-common #contentWrapper {
 		background-color: #212121;
 		padding-bottom: 1px;
-		margin-top: 20px;
+        margin-top: 20px;
 	}
 
 	#myanimelist:before,
@@ -111,7 +111,7 @@
 		top: 0;
 		left: 0;
 		width: 100% !important;
-		height: 48px !important;
+        height: 48px !important;
 		z-index: 99;
 	}
 
@@ -121,9 +121,9 @@
 	}
 
 	.page-common #menu_left {
-		margin-top: 5px;
+        margin-top: 5px;
 		margin-left: 200px;
-		top: 8px;
+        top: 8px;
 	}
 
 	.page-common #headerSmall a.link-mal-logo {
@@ -133,7 +133,7 @@
 		left: 10px;
 		z-index: 999;
 		filter: invert(1) saturate(0) brightness(1.5);
-		background-image: url(https://cdn.myanimelist.net/images/mal-logo-xsmall.png);
+        background-image: url(https://cdn.myanimelist.net/images/mal-logo-xsmall.png);
 	}
 
 	.page-common #header-menu.pulldown {
@@ -283,10 +283,9 @@
 
 	/* Searchbar */
 
-	#top-search-bar {
-		margin-top: 5px !important
-	}
-
+    #top-search-bar {
+        margin-top: 5px !important
+    }
 	.page-common #searchBar.searchBar #topSearchText,
 	.page-common #searchBar.searchBar #topSearchValue option {
 		background-color: #243763;
@@ -303,7 +302,7 @@
 
 	.page-common #searchBar.searchBar #topSearchValue {
 		background-position: 78px 8px;
-		margin-top: 5px;
+        margin-top: 5px;
 		background-color: #243763 !important;
 		border: none;
 	}
@@ -715,18 +714,6 @@
 	.detail-page-featured-article .news-list .news-unit .news-unit-right .information .info,
 	.news-list .news-unit .information .pv {
 		color: #CCCCCC;
-	}
-
-	.mal-navbar,
-	.mal-alert,
-	.page-forum .topic-poll .topic-poll-button {
-		background-color: transparent !important
-	}
-
-	.mal-navbar .mal-btn-toolbar,
-	.mal-navbar .mal-btn-group,
-	.fl-r.ar * {
-		filter: invert(0.9) hue-rotate(185deg) saturate(4);
 	}
 
 	/* Recommendations */
